triangle converters do not transform anymore coverage converters will transform into the kalypso coordinate system bugfixes during hmo import